"Fixed the overlapping copyright text" and " Area Calculator"

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -22,7 +22,6 @@ h1 {
   background-color: #f7f7f7;
   max-width: 1000px;
   margin: auto;
-  height: 100vh;
   border: 2px solid #f7f7f7;
   border-radius: 25px;
   overflow: hidden;
@@ -30,29 +29,52 @@ h1 {
 #header {
   background-color: #ca0020
 }
+
+#block1{
+  display: inline-block;
+  width:69%;
+  text-align: left;
+
+}
+
 #profile-picture {
-  float:left;
+  display: inline-block;
+  position: relative;
+  left: 0px;
+  top: 0px;
 }
 #welcome-text{
+  display: inline-block;
   padding-top: 25px;
   font-size: 25px;
 }
 #research-interests {
+  display: inline-block;
   text-align: left;
   font-size: 25px;
-  position: relative;
-  left: 50px;
+}
+#area_calculator {
+  display: inline-block;
+  text-align: left;
+  font-size: 25px;
+}
 
 }
 #footer {
-  position: absolute;
+
   width: 1000px;
   text-align: center;
-  bottom: 20px;
+  margin-top: 20px;
+
 }
 
 #webmap-reviews{
   text-align: left;
   font-size: 25px;
   position: relative;
+}
+
+#display_result{
+  display: inline-block;
+
 }
